APLICATION_EXAMPLE.ipynb

--- a/APLICATION_EXAMPLE.ipynb
+++ b/APLICATION_EXAMPLE.ipynb
@@ -666,7 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#EXEMPLE OF RUNNING THE MODEL AND SAVING THE RESULTS AS NIFTI FILES\n",
+    "#EXAMPLE OF RUNNING THE MODEL AND SAVING THE RESULTS AS NIFTI FILES\n",
     "\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
